feat: added custom css klasses

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* 
+    Könnte auch als normale CSS Klasse geschrieben werden 
+    
+        .sz-font-body { ... }
+
+    Die @layer-Direktive hilft dabei, die Reihenfolge der Deklarationen zu steuern,
+    indem sie Styles automatisch an die entsprechende @tailwind-Direktive verschiebt. 
+    Enabled Funktionen wie Modifikatoren und Tree-Shaking für custom CSS.     
+    
+    Die @apply-Direktive in Tailwind CSS erlaubt es, 
+    vorgefertigte Utility-Klassen (wie sie von Tailwind bereitgestellt werden) 
+    in benutzerdefinierten CSS-Klassen zu verwenden.
+    */
+
+@layer components {
+  .sz-font-header {
+    @apply font-serif text-[27px]/[1.3] font-normal tracking-tight;
+  }
+
+  .sz-font-body {
+    @apply font-sans text-[17px]/[1.5] font-normal;
+  }
+
+  .sz-font-overline {
+    @apply font-sans text-xs font-bold tracking-wide;
+  }
+
+  .sz-font-title {
+    @apply font-sans text-lg font-extrabold tracking-[0.015em];
+  }
+}
